--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "socket.io": "^4.4.0",
     "unzipper": "^0.10.11",
     "uuid": "^9.0.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "nodemonConfig": {
     "watch": [
